option INSTALL_DIR

--- a/vvcl/CMakeLists.txt
+++ b/vvcl/CMakeLists.txt
@@ -20,3 +20,7 @@ set_property(TARGET vvcl PROPERTY ACRHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH
 set_property(TARGET vvcl PROPERTY LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_PATH})
 
 target_link_libraries(vvcl ${FFMPEG_LIBRARIES})
+
+if(INSTALL_DIR)
+    install(TARGETS vvcl DESTINATION "${INSTALL_DIR}")
+endif()
